[package]
name = "pewcraft_frontend"
version = "0.1.0"
authors = ["Paul Lesur <git@lesurpaul.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
log = "0.4"
pewcraft_common = { path = "../pewcraft_common" }
serde = "1.0"
serde_json = "1.0"
reqwest = {version = "0.10", features = ["blocking", "json"]}
crossterm = "0.16.0"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
clipboard = "0.5"
futures = "0.3"
